[gd_scene load_steps=5 format=3 uid="uid://dgrgk6qd0bxcb"]

[ext_resource type="Theme" uid="uid://c0eyo008u7c35" path="res://ui/screens/screen_theme.tres" id="1_6pbjy"]
[ext_resource type="Texture2D" uid="uid://c5w7axry8fi81" path="res://icon.svg" id="2_driip"]
[ext_resource type="Script" uid="uid://cthff5afdaejf" path="res://ui/screens/signal_display/signal_display.gd" id="2_wpop2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_driip"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.9453271, 0.62108314, 1)

[node name="SignalDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6pbjy")
script = ExtResource("2_wpop2")

[node name="NoSignalDisplay" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="NoSignalDisplay"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_driip")

[node name="NoSignalLabel" type="RichTextLabel" parent="NoSignalDisplay"]
layout_mode = 2
text = "Awaiting signal selection..."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="SignalDataDisplay" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SignalDataDisplay"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="SignalDataDisplay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Panel" type="Panel" parent="SignalDataDisplay/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_driip")

[node name="TitleLabel" type="RichTextLabel" parent="SignalDataDisplay/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SignalDataDisplay/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SignalDataDisplay/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SignalDataDisplay/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextContentsLabel" type="RichTextLabel" parent="SignalDataDisplay/VBoxContainer/HBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "text contents of the thing!! this might be quite long.. rahhh...."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="SignalDataDisplay/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_driip")

[node name="MarginContainer2" type="MarginContainer" parent="SignalDataDisplay/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SignalDataDisplay/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ImageContentsRect" type="TextureRect" parent="SignalDataDisplay/VBoxContainer/HBoxContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_driip")
stretch_mode = 5

[node name="Panel" type="Panel" parent="SignalDataDisplay/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_driip")
